--- a/css/styles.css
+++ b/css/styles.css
@@ -59,9 +59,18 @@ padding: 0 15px;
 
 .items{
     margin-right: 50px;
+    gap: 10px;
+    display: flex;
+    align-items: center;
+    fill: var(--color-secondary);
 }
 
-.site-nav .items:not(:last-child) {
+.icon{
+    fill: currentColor;
+}
+  
+
+.site-nav .items:not(:last-child){
     margin-right: 50px;
 }
 
@@ -117,6 +126,7 @@ padding: 0 15px;
 .site-nav .link:hover, 
 .site-nav .link:focus{
     color: var(--color-brend);
+
 }
 
 .site-nav .link.current{
@@ -128,12 +138,16 @@ padding: 0 15px;
     color: var(--color-brend);
 }
 
+.items:hover .icon{
+    fill: var(--color-brend);
+}
+
 
 /* main */
 
 .section{
-    padding-top: 47px;
-    padding-bottom: 47px;
+    padding-top: 94px;
+    padding-bottom: 94px;
     }
 
 .features{
@@ -146,8 +160,22 @@ padding: 0 15px;
 
     text-align: center;
     padding: 200px 0;
-    background: #2f303a;
+    
+    background-image: linear-gradient(
+        rgba(47, 48, 58, 0.4),
+        rgba(47, 48, 58, 0.4)
+    ),  
+    url('../images/hero.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: contain;
+    
+    height: 600px;
+    max-width: 1600px;
+    margin-left: auto;
+    margin-right: auto;
 }
+
 .section-caption{
     color: var(--color-accent);
     font-weight: 900;
@@ -184,6 +212,19 @@ padding: 0 15px;
 .buttons:focus{
     color: var(--color-accent);
     background-color: var(--color-secondary);
+}
+
+/* Особливості */
+
+.featur{
+    display: flex;
+    width: 270px;
+    height: 120px;
+    align-items: center;
+    justify-content: center;
+    background-color: #f5f4fa;
+    margin-bottom: 56px;
+    border-radius: 4px;
 }
 
 .work{
@@ -236,8 +277,10 @@ padding: 0 15px;
     margin-bottom: 50px;
 }
 
+/* Наша команда */
+
 .section-img{
-    /* background: #f5f4fa; */
+    background: #f5f4fa;
 
     padding-top: 94px;
     padding-bottom: 94px;
@@ -247,21 +290,27 @@ padding: 0 15px;
     line-height: 1.71;
 
     display: flex;
-    max-width: 100%;
-    height: auto;
 }
 
 .img .img-item:not(:last-child) {
-    padding-right: 30px;
+    margin-right: 30px;
 }
 
 .img-item{
     text-align: center;
+
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 0px 0px 4px 4px;
+}
+
+.img-item img{
+    max-width: 100%;
+    height: auto;
 }
 
 .name-desc{
     padding-top: 30px;
-    padding-bottom: 30px;
+    padding-bottom: 16px;
 }
 .name{
     font-weight: 500;
@@ -277,6 +326,54 @@ padding: 0 15px;
     line-height: 1.19;
     color: var(--color-secondary);
     letter-spacing: 0.03em;
+}
+
+.social{
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    justify-content: center;
+    padding-bottom: 30px;
+}
+
+.social-nav{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    fill: #afb1b8;
+    border-radius: 50%;
+    background-color: var(--color-accent);
+}
+
+.social-nav:hover{
+    fill: var(--color-accent);
+    background-color: var(--color-brend);
+}
+
+/* постійні клієнти */
+
+.clients{
+    display: flex;
+    width: 170px;
+    height: 92px;
+    border: 1px solid #afb1b8;
+    border-radius: 4px;
+    align-items: center;
+    justify-content: center;
+    fill: #afb1b8;
+}
+
+.clients:hover{
+    background-color: var(--background-primery);
+    fill: var(--color-brend);
+    border: 1px solid #2196f3;
+}
+.clients-list{
+    display: flex;
+    gap: 30px;
+    padding-bottom: 94px;
 }
 
 /* footer */
@@ -313,6 +410,40 @@ color: var(--color-brend);
 
 .basement{
     margin-bottom: 10px;
+}
+
+.footer{
+    display: flex;
+    align-items: baseline;
+    gap: 70px;
+}
+
+.foot-text{
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--color-accent);
+
+    margin-bottom: 20px;
+}
+
+.foot-social{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 44px;
+    height: 44px;
+    fill: var(--color-accent);
+    border-radius: 50%;
+    background: rgba(255, 255, 255, 0.1);
+    gap: 10px; 
+}
+
+.foot-social:hover{
+    fill: var(--color-accent);
+    background-color: var(--color-brend);
 }
 
 /* Portfolio */
@@ -372,7 +503,6 @@ color: var(--color-brend);
 .flex-container{
     display: flex;
     flex-wrap: wrap;
-
 }
 
 .flex-element{
@@ -390,4 +520,14 @@ color: var(--color-brend);
     border-bottom: 1px solid #EEEEEE;
     border-left: 1px solid #EEEEEE;
     border-right: 1px solid #EEEEEE;
+}
+
+.box{
+    display: block;
+}
+
+.box:hover,
+.box:focus{
+    background: var(--color-accent);
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
